changeBookStatus endpoint usage for reg & guest users impl via DB, CookieService deleted